[package]
name = "reth-alpen-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-codecs.workspace = true
reth-db-api.workspace = true
reth-primitives.workspace = true


# common
revm.workspace = true

# metrics

# misc
bytes.workspace = true
modular-bitfield.workspace = true
serde.workspace = true


[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
proptest-derive.workspace = true
proptest.workspace = true
test-fuzz.workspace = true


[features]
test-utils = []
