[package]
name = "reth-alpen-utils"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
# reth
reth-alpen-primitives.workspace = true
reth-codecs.workspace = true
reth-db-api.workspace = true
reth-db.workspace = true
reth-execution-types.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-revm.workspace = true

# common
eyre.workspace = true
tokio = { workspace = true, features = ["macros", "sync"] }

# metrics

# misc
bytes.workspace = true
modular-bitfield.workspace = true
serde.workspace = true


[dev-dependencies]
arbitrary = { workspace = true, features = ["derive"] }
proptest-derive.workspace = true
proptest.workspace = true
test-fuzz.workspace = true


[features]
test-utils = []
