[package]
name = "zkvm-primitives"
version = "0.1.0"
edition = "2021"

[dependencies]
# alloy-rlp.workspace = true
alloy-rlp = { version = "0.3.4", default-features = false }
alloy-rlp-derive = { version = "0.3", default-features = false }
alloy-primitives = { version = "0.7.2", default-features = false, features = [
    "rlp",
    "serde",
    "std",
] }
anyhow = "1.0.0"
# alloy-primitives.workspace = true
# hashbrown = "0.14.3"
reth-primitives = { path = "../../primitives", default-features = false, features = [
    "std",
] }
alloy-rpc-types = { version = "0.1", default-features = false, features = [
    "eth",
] }
alloy-eips.workspace = true
reth-trie-common.workspace = true

# revm = { version = "5.0.0", default-features = false, features = ["std"] }
revm = { version = "12.1.0", default-features = false }
# reth-revm = { path = "../../revm", default-features = false, features = [
#     "std",
# ] }
# reth-rpc-types.workspace = true
# reth-trie-common.workspace = true
# reth-libmdbx.workspace = true

# revm = "5.0.0"
# revm.workspace = true
# revm = { git = "https://github.com/sp1-patches/revm", branch = "patch-v5.0.0", features = [
#     "std",
# ], default-features = false }
# revm = { version = "5.0", default-features = false }


rlp = "0.5.2"
serde = { workspace = true }
thiserror = "1.0"

[dev-dependencies]
bincode = "1.3"
hex-literal = "0.4"
serde_json = "1.0"
